--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -12,7 +12,8 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/confirmation.css" rel="stylesheet" />
     <script src="server.js"></script>
-
+    <script src="script.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
