--- a/front/html/product.html
+++ b/front/html/product.html
@@ -12,6 +12,7 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/product.css" rel="stylesheet" />
     <script src="server.js"></script>
+    <script src="script.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
