--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/confirmation.css" rel="stylesheet" />
-    <script src="server.js"></script>
     <script src="../js/script.js"></script>
+   
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -77,6 +77,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/cart.js"></script>
+  <script src="../js/confirmation.js"></script>
   </body>
 </html>
